#5 and code cleanup